Migrated things to JDK 22 / FluffyJ-Memory 1.9.0